<resources>
    <string name="app_name">K-Money</string>
    <string name="action_settings">Configuración</string>
    <string name="Ingreso">Ingreso</string>
    <string name="Egreso">Egreso</string>
    <string name="Deudas">Deudas</string>
    <string name="title_activity_ingresos">Ingresos</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="logotipo">Logotipo</string>
    <string name="ingresos">Ingresos</string>
    <string name="crear_ingreso">Crear Ingreso</string>
    <string name="consultar_ingreso">Consultar ingreso</string>
    <string name="title_activity_crear_ingreso">CrearIngreso</string>
    <string name="titulo">Título: *</string>
    <string name="descripcion">Descripción:</string>
    <string name="valor">Valor:*</string>
    <string name="fecha">Fecha:*</string>
    <string name="title_activity_ver_ingreso">VerIngreso</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_consultar_ingresos">consultarIngresos</string>
    <string name="title_activity_egresos">Egresos</string>
    <string name="egresos">Egresos</string>
    <string name="crear_egresos">Crear Egreso</string>
    <string name="consultar_egreso">Consultar Egreso</string>
    <string name="title_activity_crear_egreso">CrearEgreso</string>
    <string name="title_activity_consultar_egreso">ConsultarEgreso</string>
    <string name="title_activity_ver_egreso">VerEgreso</string>
    <string name="title_activity_deudas">Deudas</string>
    <string name="deudas">Deudas</string>
    <string name="crear_deuda">Crear Deuda</string>
    <string name="Consultar_Deudas">Consultar Deudas</string>
    <string name="title_activity_crear_deuda">CrearDeuda</string>
    <string name="NombrePrestado">Nombre Del prestador:*</string>
    <string name="ValorPrestamo">Valor Del Prestamo:*</string>
    <string name="FechaPago">Fecha de Pago:*</string>
    <string name="title_activity_consultar_deudas">ConsultarDeudas</string>
    <string name="title_activity_ver_deuda">VerDeuda</string>
    <string name="Utilidad">Utilidad</string>
</resources>
