<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hector.k_money.Inicio"
    tools:showIn="@layout/activity_inicio"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/Bienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:fontFamily="cursive"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="188dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:contentDescription="@string/logotipo" />

    <TextView
        android:text="@string/Utilidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Utilidad"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        android:textColor="@android:color/black" />
</LinearLayout>
