<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ver_deuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hector.k_money.VerDeuda"
    tools:showIn="@layout/activity_ver_deuda"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ver_titulo_Deuda"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:text="@string/NombrePrestado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ver_nombre_Deuda"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:text="@string/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ver_descripcion_Deuda"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:text="@string/valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ver_valor_Deuda"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:text="@string/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ver_fecha_Deuda"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/background_dark" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/botonera">

                <Button
                    android:text="@string/editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editar_Deuda"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_dark" />

                <Button
                    android:text="@string/eliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eliminar_Deuda"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
