<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_crear_ingreso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hector.k_money.CrearIngreso"
    tools:showIn="@layout/activity_crear_ingreso"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/titulo_ingreso"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:text="@string/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/descripcion_ingreso"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:text="@string/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valor_ingreso"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:text="@string/fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/fecha_ingreso"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:text="@string/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_ingreso"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="0dp"
        android:background="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText2" />

</LinearLayout>
