<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_crear_deuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hector.k_money.CrearDeuda"
    tools:showIn="@layout/activity_crear_deuda"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/TituloDeudas"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:text="@string/NombrePrestado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/NombresPrestadorDeudas"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:inputType="textPersonName" />

            <TextView
                android:text="@string/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/descripcion_Deudas"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:text="@string/ValorPrestamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/valor_Deudas"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:text="@string/FechaPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/fecha_Deudas"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Button
                android:text="@string/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_Deuda"
                style="@style/Widget.AppCompat.Button.Colored"
                android:elevation="0dp"
                android:background="@android:color/holo_blue_dark" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
