<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_deudas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hector.k_money.Deudas"
    tools:showIn="@layout/activity_deudas"
    android:orientation="vertical"
    android:weightSum="1">
    <TextView
        android:text="@string/deudas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:fontFamily="sans-serif" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size" />

    <Button
        android:text="@string/crear_deuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crear_Deuda"
        android:layout_weight="0.10"
        style="@style/Widget.AppCompat.Button"
        android:fontFamily="sans-serif-medium"
        android:background="@android:color/holo_blue_dark" />

    <Space
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size" />

    <Button
        android:text="@string/Consultar_Deudas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button"
        android:background="@android:color/holo_blue_dark"
        android:id="@+id/Consultar_Deudas"
        android:layout_weight="0.09" />
</LinearLayout>
